# kitz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: DECISIONS.md  DESIGN.md  cookbook.md  getting-started.md  migration-from-ratatui.md
docs-site/: book.toml
docs-site/src/: SUMMARY.md  changelog.md  contributing.md  introduction.md
docs-site/src/advanced/: async-commands.md  escape-hatches.md  logging.md  subscriptions.md  testing.md
docs-site/src/api-reference/: overview.md
docs-site/src/cli/: dev-workflow.md  generate-command.md  new-command.md  overview.md  theme-management.md
docs-site/src/cookbook/: recipes.md
docs-site/src/core-concepts/: application-trait.md  architecture.md  context.md  messages-and-commands.md
docs-site/src/getting-started/: development-workflow.md  installation.md  project-structure.md  your-first-app.md
docs-site/src/migration/: from-existing-tui.md  from-raw-ratatui.md
docs-site/src/overlays/: built-in-overlays.md  custom-overlays.md  overview.md
docs-site/src/panels/: error-boundaries.md  focus-and-navigation.md  overview.md  panel-layout.md
docs-site/src/screens/: navigation-stack.md  overview.md
docs-site/src/themes/: built-in-themes.md  custom-themes.md  overview.md
docs-site/src/widgets/: footer.md  overview.md  text-input.md  toast-notifications.md
docs-site/theme/: head.hbs
docs-site/theme/css/: custom.css  variables.css
examples/: async_fetch.rs  counter.rs  dashboard.rs  editor.rs  file_manager.rs  hello.rs  theme_showcase.rs  todo.rs
src/: app.rs  command.rs  context.rs  error.rs  lib.rs  logging.rs  prelude.rs  subscription.rs  testing.rs
src/cli/: main.rs  mod.rs
src/cli/commands/: dev.rs  generate.rs  mod.rs  new.rs  theme.rs
src/cli/generators/: helpers.rs  mod.rs  overlay.rs  panel.rs  screen.rs
src/overlay/: command_palette.rs  confirm.rs  help.rs  mod.rs
src/panel/: error_boundary.rs  layout.rs  manager.rs  mod.rs
src/runtime/: mod.rs  terminal.rs
src/screen/: mod.rs
src/theme/: mod.rs  palettes.rs
src/toast/: mod.rs
src/widgets/: centered_rect.rs  footer.rs  mod.rs  text_input.rs
target_old/: .rustc_info.json
template/: Cargo.toml  cargo-generate.toml
template/src/: main.rs
tests/: cli_integration.rs  integration.rs
(+104 files in other folders)
