[package]
name = "rataframe"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Harry-kp"]
description = "The application framework for ratatui — convention-driven panels, overlays, themes, and TEA architecture"
documentation = "https://docs.rs/rataframe"
homepage = "https://github.com/Harry-kp/rataframe"
repository = "https://github.com/Harry-kp/rataframe"
license = "MIT"
readme = "README.md"
keywords = ["tui", "ratatui", "framework", "terminal", "tea"]
categories = ["command-line-interface", "gui"]
exclude = ["target_old/", ".github/", "docs/"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
unicode-width = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
nucleo-matcher = "0.3"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "time"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "todo"
path = "examples/todo.rs"

[[example]]
name = "async_fetch"
path = "examples/async_fetch.rs"

[[example]]
name = "editor"
path = "examples/editor.rs"

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"

[[example]]
name = "theme_showcase"
path = "examples/theme_showcase.rs"
